.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:30:58 **** Incremental Build of configuration Debug for project Ejercicio 4-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio 4-2.o" "..\\src\\Ejercicio 4-2.c" 
..\src\Ejercicio 4-2.c: In function 'main':
..\src\Ejercicio 4-2.c:29:15: warning: implicit declaration of function 'getFloat' [-Wimplicit-function-declaration]
   29 |     retorno = getFloat("Ingrese la temperatura en C°", 0, 100, &temperatura);
      |               ^~~~~~~~
..\src\Ejercicio 4-2.c:19:8: warning: unused variable 'temperaturaConvertida' [-Wunused-variable]
   19 |  float temperaturaConvertida;
      |        ^~~~~~~~~~~~~~~~~~~~~
..\src\Ejercicio 4-2.c:17:6: warning: variable 'retorno' set but not used [-Wunused-but-set-variable]
   17 |  int retorno;
      |      ^~~~~~~
..\src\Ejercicio 4-2.c: At top level:
..\src\Ejercicio 4-2.c:40:5: error: conflicting types for 'getFloat'
   40 | int getFloat(char mensaje[], float min, float max, float *numero){
      |     ^~~~~~~~
..\src\Ejercicio 4-2.c:40:1: note: an argument type that has a default promotion can't match an empty parameter name list declaration
   40 | int getFloat(char mensaje[], float min, float max, float *numero){
      | ^~~
..\src\Ejercicio 4-2.c:29:15: note: previous implicit declaration of 'getFloat' was here
   29 |     retorno = getFloat("Ingrese la temperatura en C°", 0, 100, &temperatura);
      |               ^~~~~~~~
Info: Nothing to build for Ejercicio 1-1
Info: Nothing to build for Ejercicio 1-2
Info: Nothing to build for Ejercicio 1-3
Info: Nothing to build for Ejercicio 1-4
Info: Nothing to build for Ejercicio 2-1
Info: Nothing to build for Ejercicio 2-2
Info: Nothing to build for Ejercicio 2-3
Info: Nothing to build for Ejercicio 3-1
Info: Nothing to build for Ejercicio 3-2
Info: Nothing to build for Ejercicio 3-3
20:32:30 **** Incremental Build of configuration Debug for project Ejercicio 3-4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio 3-4.o" "..\\src\\Ejercicio 3-4.c" 
gcc -o "Ejercicio 3-4.exe" "src\\Ejercicio 3-4.o" 
Info: Nothing to build for Ejercicio 4-1
20:32:30 **** Incremental Build of configuration Debug for project Ejercicio 4-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio 4-2.o" "..\\src\\Ejercicio 4-2.c" 
..\src\Ejercicio 4-2.c: In function 'main':
..\src\Ejercicio 4-2.c:21:8: warning: unused variable 'temperaturaConvertida' [-Wunused-variable]
   21 |  float temperaturaConvertida;
      |        ^~~~~~~~~~~~~~~~~~~~~
..\src\Ejercicio 4-2.c:19:6: warning: variable 'retorno' set but not used [-Wunused-but-set-variable]
   19 |  int retorno;
      |      ^~~~~~~
gcc -o "Ejercicio 4-2.exe" "src\\Ejercicio 4-2.o" 
Info: Nothing to build for Ejercicio 1-1
Info: Nothing to build for Ejercicio 1-2
Info: Nothing to build for Ejercicio 1-3
Info: Nothing to build for Ejercicio 1-4
Info: Nothing to build for Ejercicio 2-1
Info: Nothing to build for Ejercicio 2-2
Info: Nothing to build for Ejercicio 2-3
Info: Nothing to build for Ejercicio 3-1
Info: Nothing to build for Ejercicio 3-2
Info: Nothing to build for Ejercicio 3-3
Info: Nothing to build for Ejercicio 3-4
Info: Nothing to build for Ejercicio 4-1
20:36:29 **** Incremental Build of configuration Debug for project Ejercicio 4-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio 4-2.o" "..\\src\\Ejercicio 4-2.c" 
gcc -o "Ejercicio 4-2.exe" "src\\Ejercicio 4-2.o" 
Info: Nothing to build for Ejercicio 4-2
20:46:26 **** Incremental Build of configuration Debug for project Ejercicio 4-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Ejercicio 4-2.o" "..\\src\\Ejercicio 4-2.c" 
gcc -o "Ejercicio 4-2.exe" "src\\Ejercicio 4-2.o" 
